JumpScript/tests/baselines/reference/await_unaryExpression_es6_2.errors.txt
tests/cases/conformance/async/es6/await_unaryExpression_es6_2.jump(2,12): error TS2703: The operand of a delete operator must be a property reference.
tests/cases/conformance/async/es6/await_unaryExpression_es6_2.jump(6,12): error TS2703: The operand of a delete operator must be a property reference.


==== tests/cases/conformance/async/es6/await_unaryExpression_es6_2.jump (2 errors) ====
    async function bar1() {
        delete await 42;
               ~~~~~~~~
!!! error TS2703: The operand of a delete operator must be a property reference.
    }
    
    async function bar2() {
        delete await 42;
               ~~~~~~~~
!!! error TS2703: The operand of a delete operator must be a property reference.
    }
    
    async function bar3() {
        void await 42;
    }